desktop_app/app_log.txt
Traceback (most recent call last):
  File "/home/ismail/Desktop/projects/shiakati_store/backend/desktop_app/main.py", line 13, in <module>
    from src.ui.main_window_new import MainWindow
  File "/home/ismail/Desktop/projects/shiakati_store/backend/desktop_app/src/ui/main_window_new/__init__.py", line 6, in <module>
    from .base import MainWindow
  File "/home/ismail/Desktop/projects/shiakati_store/backend/desktop_app/src/ui/main_window_new/base.py", line 14, in <module>
    from ...utils.api_client import APIClient
  File "/home/ismail/Desktop/projects/shiakati_store/backend/desktop_app/src/utils/api_client.py", line 292
    if response.status_code != 200:                    if response.status_code == 401:                    elif response.status_code == 404:                    else:                    return []
                                                       ^^
SyntaxError: invalid syntax
Critical error during imports: invalid syntax (api_client.py, line 292)
